fixed shifting

--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+}
+
 * { margin: 0; padding: 0; box-sizing: border-box; }
 
 body {
